	* Added exr_ctl_exr, a program that reads an OpenEXR file,
	  applies one or more CTL programs to the pixels, and
	  stores the result in another OpenEXR file.
	  (Florian Kainz)
	* Installation Tuning :
	  - corrected version number on dso's (libtool) - now 1.0
	  - Separated package's LDFLAGS and LIBS flags so that test programs
	    can link with static libraries properly
	  - eliminated some warning messages during install
	  (Andrew Kunz)

Version 0.9.0:
	* initial release
	* New build scripts for Linux/Unix
	  (Andrew Kunz)
	* New Windows project files and build scripts
	  (Kimball Thurston)