@@ -72,8 +72,11 @@ exrCtlExr (const char inFileName[],
 	   const char outFileName[],
 	   const std::vector<std::string> &transformNames,
 	   const AttrMap &extraAttrs,
+	   int numThreads,
 	   bool verbose)
 {
+    setGlobalThreadCount (numThreads);
+
     //
     // Read the input file
     //
